# EdgeAI-DeployKit

./: README.md  pyproject.toml
backend/: schemas.py
backend/api/: routes.py
backend/services/: jobs.py  models.py  runtime.py  security.py
docs/: MODEL_ADAPTER_MATRIX.md
edgeai/: convert_model.py  llm_runner.py  local_cli_ext.py  local_runner.py  model_intelligence.py  task_result.py  task_system.py
product-ui/app/workspace/: page.tsx
product-ui/components/: AppShell.tsx  ConvertModelPanel.tsx  KpiGrid.tsx  LocalLlmChatPanel.tsx  LocalRunProductPanel.tsx  RuntimeChecksPanel.tsx  TopBar.tsx
product-ui/lib/: api.ts  fallback-data.ts  types.ts
release/: build_release.py
scripts/: edgeai_local_model_setup.py  install-linux.sh  start-windows.ps1
